--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -5,10 +5,13 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Joom
-    link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+    link(href="https://unpkg.com/mvp.css", rel="stylesheet")
   body
     header  
       h1 Joom
     main
-      h2 Welcome to Joom
+      ul
+      form
+        input(type="text", placeholder="write a msg", required)
+        button Send
     script(src="/public/js/app.js")
