--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,17 @@ html(lang="en")
     header  
       h1 Joom
     main
+      div#welcome
+        h4 Open Rooms:
+        ul
+        form
+          input(placeholder="room name", required, type="text")
+          button Enter Room
+      div#room
+        h3
+        ul
+        form#msg
+          input(placeholder="message", required, type="text")
+          button Send
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js")
